--- a/src/postgres-kafka-elastic/docker-compose.yml
+++ b/src/postgres-kafka-elastic/docker-compose.yml
@@ -31,7 +31,7 @@ services:
 
   # Elasticsearch
   elasticsearch:
-    image: elasticsearch:latest
+    image: elasticsearch:8.13.1
     environment:
       - discovery.type=single-node
     ports:
@@ -41,7 +41,7 @@ services:
 
   # Kibana (optional for visualization)
   kibana:
-    image: kibana:latest
+    image: kibana:8.13.1
     ports:
       - "5601:5601"
     networks:
